# lib-pcg-avm

./: .algokit.toml  .copier-answers.yml  LICENSE  README.md  lib-pcg-algopy.code-workspace  lib-pcg-avm.code-workspace  pyproject.toml
.algokit/sources/: sources.avm.json
.github/: dependabot.yml
.tours/: getting-started-with-your-algokit-project.tour
projects/lib-pcg-algopy/: .algokit.toml  .copier-answers.yml  .pre-commit-config.yaml  README-PyPI.md  README.md  pyproject.toml
projects/lib-pcg-algopy/.algokit/: .copier-answers.yml
projects/lib-pcg-algopy/.algokit/sources/: sources.avm.json
projects/lib-pcg-algopy/.algokit/sources/LibPcg64Exposer/: approval.teal.tok.map  clear.teal
projects/lib-pcg-algopy/lib_pcg/: __init__.py  consts.py  pcg128.py  pcg32.py  pcg64.py  xsh_rr_64_32.py  xsh_rr_double_64_32.py  xsh_rr_quadruple_64_32.py
projects/lib-pcg-algopy/smart_contracts/: __main__.py  consts.py
projects/lib-pcg-algopy/smart_contracts/artifacts/lib_pcg128_exposer/: LibPcg128ExposerAlgoPy.approval.teal  LibPcg128ExposerAlgoPy.arc56.json  LibPcg128ExposerAlgopy.approval.puya.map  LibPcg128ExposerAlgopy.approval.teal  LibPcg128ExposerAlgopy.arc32.json  LibPcg128ExposerAlgopy.clear.teal  client.py
projects/lib-pcg-algopy/smart_contracts/artifacts/lib_pcg128_test_harness/: LibPCG128TestHarnessAlgoPy.approval.teal  LibPCG128TestHarnessAlgoPy.arc56.json  LibPcg128TestHarnessAlgoPy.approval.teal  LibPcg128TestHarnessAlgoPy.arc56.json
projects/lib-pcg-algopy/smart_contracts/artifacts/lib_pcg32_exposer/: LibPcg32Exposer.approval.teal  LibPcg32Exposer.arc32.json  LibPcg32Exposer.clear.teal  LibPcg32ExposerAlgoPy.approval.teal  LibPcg32ExposerAlgoPy.arc56.json  LibPcg32ExposerAlgopy.approval.puya.map  LibPcg32ExposerAlgopy.approval.teal  LibPcg32ExposerAlgopy.arc32.json  LibPcg32ExposerAlgopy.clear.teal  client.py
projects/lib-pcg-algopy/smart_contracts/artifacts/lib_pcg32_test_harness/: LibPCG32TestHarnessAlgoPy.approval.teal  LibPCG32TestHarnessAlgoPy.arc56.json  LibPcg32TestHarnessAlgoPy.approval.teal  LibPcg32TestHarnessAlgoPy.arc56.json
projects/lib-pcg-algopy/smart_contracts/artifacts/lib_pcg64_exposer/: LibPcg64Exposer.approval.teal  LibPcg64Exposer.arc32.json  LibPcg64Exposer.clear.teal  LibPcg64ExposerAlgoPy.approval.teal  LibPcg64ExposerAlgoPy.arc56.json  LibPcg64ExposerAlgopy.approval.puya.map  LibPcg64ExposerAlgopy.approval.teal  LibPcg64ExposerAlgopy.arc32.json  LibPcg64ExposerAlgopy.clear.teal  client.py
projects/lib-pcg-algopy/smart_contracts/artifacts/lib_pcg64_test_harness/: LibPCG64TestHarnessAlgoPy.approval.teal  LibPCG64TestHarnessAlgoPy.arc56.json  LibPcg64TestHarnessAlgoPy.approval.teal  LibPcg64TestHarnessAlgoPy.arc56.json
projects/lib-pcg-algopy/smart_contracts/helpers/: build.py
projects/lib-pcg-algopy/smart_contracts/lib_pcg128_exposer/: contract.py
projects/lib-pcg-algopy/smart_contracts/lib_pcg128_test_harness/: contract.py
projects/lib-pcg-algopy/smart_contracts/lib_pcg32_exposer/: contract.py
projects/lib-pcg-algopy/smart_contracts/lib_pcg32_test_harness/: contract.py
projects/lib-pcg-algopy/smart_contracts/lib_pcg64_exposer/: contract.py
projects/lib-pcg-algopy/smart_contracts/lib_pcg64_test_harness/: contract.py
projects/lib-pcg-algopy/tests/: lib_pcg32_exposer_test.py  lib_pcg64_exposer_test.py
smart_contracts/: README.md  config.py
test_vectors/: 32bit_sequences.json  64bit_sequences.json
tests/: lib_pcg32_exposer_test.py  lib_pcg64_exposer_test.py  lib_pcg_exposer_test.py
(+349 files in other folders)
