[tool.poetry]
name = "lib-pcg-algopy"
version = "0.4.3"
description = "PCG library implemented using Algorand Python"
license = "MIT"
authors = ["Giorgio Ciotti <gciotti.dev@gmail.com>"]
readme = "README-PyPI.md"
repository = "https://github.com/CiottiGiorgio/lib-pcg-avm"
packages = [{include = "lib_pcg"}]

[tool.poetry.dependencies]
python = "^3.12"
algorand-python = "^3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "*"}
ruff = ">=0.9.4,<0.15.0"
mypy = "^1"
pip-audit = "*"
pre-commit = "*"
puyapy = "*"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
lint.unfixable = ["B", "RUF"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.mypy]
files = ["lib_pcg/", "smart_contracts/"]
python_version = "3.12"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
extra_checks = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
untyped_calls_exclude = ["algosdk"]
# Remove if you prefer to use mypy's default behavior against 
# untyped algosdk types
[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_expr = false
